2011-09-15  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/50401
	PR fortran/50403
	* gfortran.dg/function_types_3.f90: New.

2011-09-15  Jason Merrill  <jason@redhat.com>

	PR c++/50365
	* g++.dg/cpp0x/trailing7.C: New.

	PR c++/50361
	* g++.dg/cpp0x/nullptr23.C: New.

2011-09-15  Ira Rosen  <ira.rosen@linaro.org>

	* gcc.dg/vect/bb-slp-25.c: New.

2011-09-14  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50391
	* g++.dg/cpp0x/noexcept15.C: New.

2011-09-14  Tom de Vries  <tom@codesourcery.com>

	PR middle-end/50251
	* gcc.dg/pr50251.c: New test.

2011-09-14  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34547
	PR fortran/50375
	* gfortran.dg/null_5.f90: New.
	* gfortran.dg/null_6.f90: New.

2011-09-13  Bernd Schmidt  <bernds@codesourcery.com>

	* gcc.c-torture/compile/20110913-1.c: New test.

2011-09-13  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/50379
	* gfortran.dg/result_2.f90: New.

2011-09-13  Sevak Sargsyan <sevak.sargsyan@ispras.ru>

	* gcc.target/arm/neon-combine-sub-abs-into-vabd.c: New test.

2011-09-13  Dodji Seketeli  <dodji@redhat.com>

	PR c++/48320
	* g++.dg/cpp0x/variadic116.C: New test case.

2011-09-12  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/mips.exp (mips_option_groups): Add debug options.
	* gcc.target/mips/interrupt_handler-2.c: New test.
	* gcc.target/mips/interrupt_handler-3.c: Likewise.

2011-09-12  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/fntmpdefarg2.C: Add more tests.

	* g++.dg/cpp0x/explicit7.C: New.

2011-09-12  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/50212
	* g++.dg/other/pr50212.C: New test.

2011-09-12  Georg-Johann Lay  <avr@gjlay.de>

	PR target/43746
	* testsuite/gcc.target/avr/torture/avr-torture.exp
	(AVR_TORTURE_OPTIONS): Add test cases "-O2 -fdata-sections" and
	"-O2 -fmerge-all-constants".

2011-09-11  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/50327
	* gfortran.dg/do_while_1.f90: New test.

2011-09-11  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/35831