@@ -1,3 +1,9 @@
+2011-09-15  Tom de Vries  <tom@codesourcery.com>
+
+	PR testsuite/50322
+	* gcc.dg/tree-ssa/ivopts-lt.c: require stdint_types. include stdint.h.
+	Use uintptr_t in f1.  Undo avr xfails.
+
 2011-09-15  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/50401
